@@ -4,6 +4,7 @@
 * CitrusPay: Add 3DSecureId field [davidsantoso]
 * CyberSource: Only get alpha2 country code when it's a known country [bruno] #2238
 * Monei: Add US and CA as new supported countries [davidgf] #2209
+* iATS: Add scrubbing support to iATS [bruno] #2228
 
 == Version 1.61.0 (November 7, 2016)
 * Add codes AQ, BQ, SX, and SS to list of countries and update SD numeric code [zxlin]
